Improvements to documentation

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -35,3 +35,31 @@
   doi = {10.1103/PhysRevA.105.012433},
   url = {https://link.aps.org/doi/10.1103/PhysRevA.105.012433}
 }
+
+@article{Haegeman2011,
+  title = {Time-Dependent Variational Principle for Quantum Lattices},
+  author = {Haegeman, Jutho and Cirac, J. Ignacio and Osborne, Tobias J. and Pizorn, Iztok and Verschelde, Henri and Verstraete, Frank},
+  journal = {Phys. Rev. Lett.},
+  volume = {107},
+  issue = {7},
+  pages = {070601},
+  year = {2011},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.107.070601},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.107.070601}
+}
+
+@article{Haegeman2016,
+  title = {Unifying time evolution and optimization with matrix product states},
+  author = {Haegeman, Jutho and Lubich, Christian and Oseledets, Ivan and Vandereycken, Bart and Verstraete, Frank},
+  journal = {Phys. Rev. B},
+  volume = {94},
+  issue = {16},
+  pages = {165116},
+  year = {2016},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.94.165116},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.94.165116}
+}
