Expand Hamiltonian, polynomials, time evolution and references

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -63,3 +63,29 @@
   doi = {10.1103/PhysRevB.94.165116},
   url = {https://link.aps.org/doi/10.1103/PhysRevB.94.165116}
 }
+
+@article{hoffman1991,
+  title = {Analytic banded approximation for the discretized free propagator},
+  author = {Hoffman, D. K. and Nayar, N. and Sharafeddin, O. A. and Kouri, D. J.},
+  journal = {J. Phys. Chem.},
+  volume = {95},
+  number = {21},
+  pages = {8299--8305},
+  year = {1991},
+  publisher = {American Chemical Society},
+  doi = {10.1021/j100174a052}
+}
+
+@article{chen2023,
+  title = {Quantum Fourier Transform Has Small Entanglement},
+  author = {Chen, Jielun and Stoudenmire, E. Miles and White, Steven R.},
+  journal = {PRX Quantum},
+  volume = {4},
+  issue = {4},
+  pages = {040318},
+  year = {2023},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PRXQuantum.4.040318},
+  url = {https://link.aps.org/doi/10.1103/PRXQuantum.4.040318}
+}
