Add context for sparsely documented sections

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -89,3 +89,26 @@
   doi = {10.1103/PRXQuantum.4.040318},
   url = {https://link.aps.org/doi/10.1103/PRXQuantum.4.040318}
 }
+
+@article{kuhner1999,
+  title = {Dynamical correlation functions using the density matrix renormalization group},
+  author = {K\"uhner, Thomas D. and White, Steven R.},
+  journal = {Phys. Rev. B},
+  volume = {60},
+  issue = {1},
+  pages = {335--343},
+  year = {1999},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.60.335},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.60.335}
+}
+
+@misc{rakhuba2022,
+  title = {Robust alternating direction implicit solver in quantized tensor formats for a three-dimensional elliptic PDE},
+  author = {Rakhuba, Maxim and Savostyanov, Dmitry and Oseledets, Ivan},
+  year = {2022},
+  eprint = {2209.14808},
+  archivePrefix = {arXiv},
+  primaryClass = {math.NA}
+}
