Run all example notebooks

--- a/examples/TCI.ipynb
+++ b/examples/TCI.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -202,12 +202,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can see from the logs that, nevertheless, we achieve very good convergence.\n",
+    "\n",
     "We can employ the same tools to encode functions with no quantization (the so-called tensor-train (TT) representation). In this case, we do not assign a quantization with `map_matrix` and instead assume the default arguments. In this case, the function is a product state and trivially has a bond dimension 1, which TCI algorithms overestimate. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
